--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-    "name": "@1inch/mooniswap",
+    "name": "@emiswap-com/emiswap",
     "version": "0.0.1",
     "description": "",
     "repository": {
         "type": "git",
-        "url": "git@github.com:CryptoManiacsZone/mooniswap.git"
+        "url": "git@github.com:EMISWAP-COM/emiswap.git"
     },
     "license": "MIT",
     "dependencies": {
-        "@openzeppelin/contracts": "^3.0.2"
+        "bignumber.js": "^9.0.1",
+        "chai-bignumber": "^3.0.0",
+        "dotenv": "^8.2.0",
+        "web3": "^1.3.0"
     },
     "devDependencies": {
         "@codechecks/client": "^0.1.10",
@@ -22,7 +25,11 @@
         "eslint-plugin-standard": "^4.0.0",
         "eth-gas-reporter": "^0.2.17",
         "ganache-cli": "^6.9.1",
+        "@openzeppelin/contract-loader": "^0.6.1",
+        "@openzeppelin/contracts": "^3.0.2",
+        "@openzeppelin/test-environment": "^0.1.5",
         "@openzeppelin/test-helpers": "^0.5.6",
+        "@truffle/hdwallet-provider": "^1.1.0",
         "solc": "^0.6.12",
         "solidity-coverage": "^0.7.9",
         "solhint": "^3.0.0",
@@ -30,7 +37,9 @@
         "truffle-flattener": "^1.4.4"
     },
     "scripts": {
-        "test": "truffle test --stacktrace",
+        "test": "mocha --exit --recursive test --timeout 30000",
+        "ttest": "truffle test --stacktrace",
+        "compile": "node update-version.js && truffle compile",
         "coverage": "truffle run coverage",
         "coveralls": "truffle run coverage && cat coverage/lcov.info | coveralls",
         "lint:js": "eslint .",
