Make complex (dex, crowdsale, vamp) migration

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "deploy_dex_kovan2": "truffle migrate --network kovan --f 2 --to 2",
         "deploy_dex_local": "truffle migrate --network local --f 1 --to 1",
         "deploy_dex_local2": "truffle migrate --network local --f 2 --to 2",
+        "deploy_dex_local4": "truffle migrate --network local --f 4 --to 41",
         "test2": "truffle test --stacktrace",
         "coverage": "truffle run coverage",
         "coveralls": "truffle run coverage && cat coverage/lcov.info | coveralls",
