--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bignumber.js": "^9.0.1",
         "chai-bignumber": "^3.0.0",
         "dotenv": "^8.2.0",
+        "moment": "^2.29.1",
         "truffle-flattener": "^1.5.0",
         "web3": "^1.3.0",
         "xlsx": "^0.16.8"
