--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "ganache-cli": "^6.9.1",
         "husky": "^4.3.0",
         "mocha": "^8.1.3",
+        "prettier": "^2.2.1",
+        "prettier-plugin-solidity": "^1.0.0-beta.3",
         "solc": "^0.6.12",
         "solhint": "^3.0.0",
         "solidity-coverage": "^0.7.9",
