--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@ethersproject/address": "^5.0.9",
+        "@ethersproject/solidity": "^5.0.8",
         "bignumber.js": "^9.0.1",
         "chai-bignumber": "^3.0.0",
         "dotenv": "^8.2.0",
+        "ethers": "^5.0.26",
         "web3": "^1.3.0"
     },
     "devDependencies": {
