--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
         "dist:mocktoken": "truffle-flattener ./contracts/mocks/MockWBTC.sol > ./flat/MockWBTC.Full.sol",
         "dist:emivault": "node update-version.js && truffle-flattener ./contracts/EmiVault.sol > ./flat/EmiVault.Full.sol",
         "dist:emiprice": "node update-version.js && truffle-flattener ./contracts/EmiPrice.sol > ./flat/EmiPrice.Full.sol",
+        "dist:timelock": "node update-version.js && truffle-flattener ./contracts/Timelock.sol > ./flat/Timelock.Full.sol",
         "prettier": "prettier --write 'contracts/**/*.sol'"
     }
 }
