Prepared for preprod deploy

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
         "dist:emivault": "node update-version.js && truffle-flattener ./contracts/EmiVault.sol > ./flat/EmiVault.Full.sol",
         "dist:emiprice": "node update-version.js && truffle-flattener ./contracts/EmiPrice.sol > ./flat/EmiPrice.Full.sol",
         "dist:timelock": "node update-version.js && truffle-flattener ./contracts/Timelock.sol > ./flat/Timelock.Full.sol",
+        "dist:tokenmock": "node update-version.js && truffle-flattener ./contracts/mocks/TokenMock.sol > ./flat/mocks/TokenMock.Full.sol",
         "prettier": "prettier --write 'contracts/**/*.sol'"
     }
 }
