--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "chai-bignumber": "^3.0.0",
         "dotenv": "^8.2.0",
         "ethers": "^5.0.26",
+        "moment": "^2.29.1",
         "web3": "^1.3.3"
     },
     "devDependencies": {
