--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^8.2.0",
         "ethers": "^5.0.29",
         "moment": "^2.29.1",
+        "truffle-flattener": "^1.5.0",
         "web3": "^1.3.4"
     },
     "devDependencies": {
