fixed tests issues

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "scripts": {
         "test": "mocha --exit --recursive test --timeout 100000",
         "ttest": "truffle test --network test",
-        "compile": "node update-version.js && truffle compile",
+        "compile": "truffle compile",
         "deploy": "truffle migrate --network local",
         "deploy_local": "truffle migrate --reset --network local --f 1 --to 2",
         "deploy_kovan": "truffle migrate --reset --network kovan",
